0.12.0
 - feat: append the directory name to ZMD (M001_data.rtdc) uploads
 - fix: aborting one upload/download job aborts all jobs (#71)
0.11.21
 - fix: reduce progress print statements in dcoraid-upload-task CLI
 - fix: occasionally the download path was computed incorrectly
 - enh: check for visibility before updating GUI widgets with QTimer
0.11.20
 - setup: bump dclab from 0.48.2 to 0.48.4
0.11.19
 - setup: bump dclab from 0.48.1 to 0.48.2
0.11.18
 - setup: bump dclab from 0.47.4 to 0.48.1
0.11.17
 - setup: bump dclab from 0.47.2 to 0.47.4
0.11.16
 - fix: return exit status 0 when using CLI with --version flag
0.11.15
 - setup: bump dclab from 0.47.1 to 0.47.2
0.11.14
 - fix: logs cluttered with warning messages when no API key is set
 - enh: add --version flag to CLI
 - setup: bump dclab from 0.47.0 to 0.47.1
0.11.13
 - maintenance release
0.11.12
 - enh: retry on connection errors when using CLI for uploads (#66)
0.11.11
 - fix: refactor "Job list not initialized!" exception in GUI into a
   logger warning (#65)
0.11.10
 - setup: bump dclab from 0.46.4 to 0.47.0 (new feature)
0.11.9
 - setup: bump dclab from 0.46.0 to 0.46.4 (new features)
0.11.8
 - fix: check the circle name before uploading (#64)
 - fix: force initialization of jobs in upload widget (#63)
 - setup: bump dclab from 0.45.0 to 0.46.0
0.11.7
 - setup: bump dclab from 0.43.1 to 0.45.0 (scalar feature support)
0.11.6
 - fix: set visibility to private based on available licenses
 - fix: calling the CLI 'dcoraid-upload-task --help' raised exception
 - fix: add timeout to api.post
 - fix: remove time DCOR-Aid waits for the server from average upload rate
 - enh: unselected license in upload dialog for example data
 - enh: increase logging verbosity
0.11.5
 - enh: increase logging verbosity
 - setup: bump dclab from 0.43.0 to 0.43.1
0.11.4
 - build: use InnoSetup "autopf" feature for installation directory
 - enh: add return values to command-line uploader
0.11.3