@@ -354,7 +354,11 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="UploadWidget" name="panel_upload" native="true"/>
+         <widget class="UploadWidget" name="panel_upload" native="true">
+          <property name="acceptDrops">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -408,7 +412,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>31</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
